# crawler_ptt

./: Dockerfile  Makefile  README.md  docker-compose-producer-duplicate-network-version.yml  docker-compose-worker-network-version.yml  local.ini  main.py  mysql.yml  ptt_crawler.py  pyproject.toml  rabbitmq-network.yml  with.env.Dockerfile
crawler/: __init__.py  config.py  producer_ptt_crawler.py  tasks_ptt_crawler.py  worker.py
